@@ -2613,4 +2613,6 @@ GLIBC_2.34 tss_delete F
 GLIBC_2.34 tss_get F
 GLIBC_2.34 tss_set F
 GLIBC_2.35 __memcmpeq F
+GLIBC_2.35 c8rtomb F
 GLIBC_2.35 _dl_find_object F
+GLIBC_2.35 mbrtoc8 F
