@@ -106,6 +106,14 @@ Major new features:
   can use it to efficiently locate unwinding information for a code
   address.
 
+* The mbrtoc8 and c8rtomb functions are added for implementation of the
+  C++20 P0482R6 and C2X N2653 proposals.  These functions perform conversions
+  between multibyte sequences and the UTF-8 character encoding.  A char8_t
+  typedef is added for the C2X N2653 proposal.  The functions are declared
+  in uchar.h if the C++20 __cpp_char8_t feature test macro or _GNU_SOURCE
+  macro is defined.  The char8_t typedef is declared in uchar.h if _GNU_SOURCE
+  is defined and __cpp_char8_t is not defined.
+
 Deprecated and removed features, and other changes affecting compatibility:
 
 * On x86-64, the LD_PREFER_MAP_32BIT_EXEC environment variable support
